# stfu

./: .gitignore  CNAME  Cargo.toml  README.md  asset-manifest.json  index.html  justfile  package.json  precache-manifest.00d1b2b5d176692df721df53d4962642.js  precache-manifest.309e63be39307a320e9577d6fdf05a25.js  precache-manifest.62aecc0df85f730384b95e1df81ed8e9.js  precache-manifest.933e3d6ec93fb0867891c8c6a28bb0c3.js  precache-manifest.aa68b7c66244a3f6a76029b33d3fb744.js  precache-manifest.ad321a02a118039cd30076b1ca54d55f.js  precache-manifest.bdeb8e8249768f03b0616f226e2b30aa.js  service-worker.js
.github/workflows/: build.yml
.old/: Cargo.toml
.old/src/: args.rs  daemon.rs  messages.rs
backend/: Cargo.toml  Dockerfile  build.rs  example.env
backend/src/: auth.rs  config.rs  consts.rs  graphql.rs  main.rs  templates.rs
backend/src/routes/: auth.rs  graphql.rs  mod.rs
backend/templates/: redirect.html
frontend/: apollo.config.js  package.json  tslint.json
frontend/public/: index.html
frontend/src/: App.tsx  constants.ts  index.tsx  style.ts  utils.ts
frontend/src/__generated__/: BotMeta.ts  Me.ts
frontend/src/components/: Error.tsx  LazyAnimateImage.tsx  Loading.tsx
frontend/src/routes/: Channel.tsx  Guild.tsx  Overview.tsx
src/: args.rs  consts.rs  daemon.rs  handler.rs  main.rs  shortcut.rs
static/js/: 2.76c780e3.chunk.js  2.76c780e3.chunk.js.map  2.a78b1baf.chunk.js  2.a78b1baf.chunk.js.map  2.af3a0fc3.chunk.js  2.af3a0fc3.chunk.js.map  main.046f570d.chunk.js  main.046f570d.chunk.js.map  main.3bb2c058.chunk.js  main.3bb2c058.chunk.js.map  main.4c6686c9.chunk.js  main.4c6686c9.chunk.js.map  main.5d9b725c.chunk.js  main.5d9b725c.chunk.js.map  main.9b9c0953.chunk.js  main.9b9c0953.chunk.js.map  main.bafe1445.chunk.js  main.bafe1445.chunk.js.map  main.ecd84bde.chunk.js  main.ecd84bde.chunk.js.map
