[package]
name = "stfu"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serenity = { version = "0.9.0-rc.0", features = ["cache", "client", "gateway", "rustls_backend", "builder", "model"], default-features = false }
tokio = { version = "0.2.22", features = ["full"] }
argh = "0.1.3"