[workspace]
members = ["backend"]

# Patch for https://github.com/twilight-rs/twilight/pull/540
# FIXME: move to tagged release once viable
[patch.crates-io]
twilight-cache-inmemory = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-embed-builder = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-gateway = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-http = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-mention = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-model = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }
twilight-standby = { branch = "trunk", git = "https://github.com/DusterTheFirst/twilight" }