[package]
name = "stfu"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "builder",
    "model",
], default-features = false }
tokio = { version = "0.2", features = ["full"] }
argh = "0.1"
notify-rust = "4.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
daemonize-me = "0.3"

[[bin]]
name = "stfu-daemon"
path = "src/daemon.rs"

[[bin]]
name = "stfu"
path = "src/shortcut.rs"
