[package]
name = "stfu-backend"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket_cors = { branch = "master", git = "https://github.com/lawliet89/rocket_cors" }
anyhow = "1.0.33"
askama = "0.10.3"
async-std = { version = "1.6.5", features = ["tokio02", "attributes", "unstable"] }
dotenv = "0.15.0"
envy = "0.4.1"
futures = "0.3.7"
juniper = { branch = "master", git = "https://github.com/graphql-rust/juniper", default-features = false }
juniper_rocket_async = { branch = "master", git = "https://github.com/graphql-rust/juniper" }
log = "0.4.11"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.8", features = ["rustls-tls"] }
rocket = { branch = "master", git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
urlencoding = "1.1.1"

# Twilight mess
twilight-permission-calculator = { branch = "branding", git = "https://github.com/dusterthefirst/permission-calculator" }
twilight-model_v1 = { package = "twilight-model", version = "0.1" }
twilight-oauth2 = { branch = "trunk", git = "https://github.com/twilight-rs/oauth2" }# TODO: merge to stable
# FIXME: move to tagged release once viable
twilight-cache-inmemory = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-embed-builder = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-gateway = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-http = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-mention = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-model = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }
twilight-standby = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-current-user-verified-optional" }

[build-dependencies]
anyhow = "1.0.33"
regex = "1.4.1"

[features]
generate_schema = []
mitm_proxy = []
