[package]
name = "stfu-backend"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_cors = { branch = "master", git = "https://github.com/lawliet89/rocket_cors" }
anyhow = "1.0.34"
askama = "0.10.3"
async-std = { version = "1.7.0", features = ["tokio02", "attributes", "unstable"] }
dotenv = "0.15.0"
envy = "0.4.1"
futures = "0.3.8"
juniper = { branch = "master", git = "https://github.com/graphql-rust/juniper", default-features = false }
juniper_rocket_async = { branch = "master", git = "https://github.com/graphql-rust/juniper" }
log = "0.4.11"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.10.8", features = ["rustls-tls"] }
rocket = { branch = "master", git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
urlencoding = "1.1.1"

# Twilight mess
twilight-permission-calculator = { branch = "trunk", git = "https://github.com/twilight-rs/permission-calculator" }
twilight-oauth2 = { branch = "trunk", git = "https://github.com/twilight-rs/oauth2" }
# FIXME: move to tagged release once viable
twilight-cache-inmemory = "0.2.1"
twilight-embed-builder = "0.2.0"
twilight-gateway = "0.2.1"
twilight-http = "0.2.2"
twilight-mention = "0.2.0"
twilight-model = "0.2.1"
twilight-standby = "0.2.0"

[patch.crates-io]
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-embed-builder = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-http = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-mention = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }
twilight-standby = { git = "https://github.com/twilight-rs/twilight", branch = "trunk" }

# twilight-cache-inmemory = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-embed-builder = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-gateway = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-http = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-mention = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-model = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }
# twilight-standby = { git = "https://github.com/DusterTheFirst/twilight", branch = "fix-client-builder-reqwest-client" }

[build-dependencies]
anyhow = "1.0.33"
regex = "1.4.1"

[features]
generate_schema = []
mitm_proxy = []
